# HyperSync

./: .gitignore  AI_DEVELOPMENT_GUIDE.md  AI_STUNIR_BRIDGE.md  ASSESSMENT_COMPLETE.md  COMMERCIAL_LICENSE.md  CORE_CATALOG.json  CORE_TIER_ASSESSMENT.md  CORE_TIER_VISUAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  LICENSING.md  PHASE_6A_SUMMARY.md  PHASE_6B_COMPLETION_SUMMARY.md  README.md  README_CORE.md  index.json  requirements-dev.txt  root_manifest_updated.json  setup.py
capsules/: index.json  manifest.json
docs/: CORRECTION_REPORT.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_PLAN.md  GEOMETRIC_PRINCIPLES.md  GETTING_STARTED.md  HVS_NVM_SEPARATION_PLAN.md  INDEX.md  NON_FUNCTIONAL_REQUIREMENTS.md  ORGANIZATION_SUMMARY.md  (+9 more)
src/codegen/: overview.md  pyproject.toml
src/codegen/cli/: consensus_cli.py  hypersync_cli.py  kappa_cli.py  transport_cli.py
src/codegen/consensus/: consensus_handler.py  consensus_operations.json
src/codegen/kappa/: kappa_channel_handler.py  kappa_channel_impl.json
src/codegen/scripts/: auto_build.py  render_runtime.py
src/codegen/tests/: test_artifacts.py  test_conformance_cli.py  test_domain_integration.py  test_domain_registry.py  test_fs_resolve_root.py  test_geo.py  test_nvm_receipts.py  test_ot.py  test_output_schema.py  test_params.py  test_pdhg.py  test_pdhg_elastic.py  test_planner.py  test_receipts_canonical.py  test_retrieval_hybrid.py  test_rules.py  test_schema.py  test_service_tiers.py  test_sign.py  test_tv.py  test_tv_l1.py
src/codegen/transport/: transport_handler.py  transport_operations.json
(+1924 files in other folders)
